--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -22,7 +22,7 @@
                     </div>
                     <div class="col-md-6 col-12 main_header_left">
                         <p>Welcome to Weather App</p>
-                        <h1>I Am A<span class="text_clr"> Mern Stack Developer </span>And Learning New Things Everyday</h1>
+                        <h1>I Am A<span class="text_clr"> Mern Stack Developer </span>And Keen to Learn New Things Everyday</h1>
                         <a href="https://www.thapatechnical.com/" target="_saurabh"><button>About Me</button></a>
                     </div>
                     <!--right side div-->
